--- a/proyecto_calidad_laravel/composer.json
+++ b/proyecto_calidad_laravel/composer.json
@@ -19,7 +19,7 @@
         "laravel/ui": "^4.6",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "phpunit/phpunit": "*"
     },
     "autoload": {
         "psr-4": {
